# XAI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: autopet_fdg_main.yaml  brain_mri_benchmark.yaml  evaluation_readiness_mapping.json  xai_protocol.yaml
docs/: autopet_fdg.md  autopet_modeling_handoff.md  grid5000.md  occidata.md  resume-projet-equipe.tex
notebooks/: brain_tumor_xai_demo.ipynb
results/: autopet_fdg_final_selection_20260327.json  index.json
scripts/: audit_evidence_pack_readiness.py  autopet_analyze_xai.py  autopet_compare_runs.py  autopet_compare_xai_methods.py  autopet_export_results.py  autopet_fetch_fdg_subset.py  autopet_finalize_3method_benchmark_from_artifacts.sh  autopet_generate_xai.py  autopet_predict_nnunet.py  autopet_prepare_fdg.py  autopet_rebuild_3method_benchmark.sh  autopet_submit_grid5000.sh  autopet_sweep_postprocess.py  autopet_train_nnunet.py  brain_mri_benchmark_xai_methods.py  build_project_evidence_pack.py  evaluate.py  generate_xai.py  grid5000_setup.sh  occidata_setup.sh  render_brain_mri_snapshot.py  run_readiness_gate.py  train.py  validate_result_snapshot.py
tests/: conftest.py  test_audit_evidence_pack_readiness_script.py  test_autopet_analyze_script.py  test_autopet_compare_xai_methods_script.py  test_autopet_data.py  test_autopet_export_script.py  test_autopet_fetch.py  test_autopet_metrics.py  test_autopet_xai.py  test_brain_mri_benchmark_script.py  test_build_evidence_pack_script.py  test_data.py  test_integration_autopet_xai_pipeline.py  test_pipeline.py  test_results_index.py  (+2 more)
(+108 files in other folders)
